target/classes/META-INF/jkube/openshift/spring-rest-services-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-ref: solution
    jkube.io/git-url: https://github.com/martinzzler99/rhoar-getting-started.git
    app.openshift.io/vcs-uri: https://github.com/martinzzler99/rhoar-getting-started.git
    jkube.io/git-commit: d674d79ab926312c8edbdc3c6d206d02c7e6cd22
    jkube.io/git-branch: solution
  labels:
    app: spring-rest-services
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: com.example
  name: spring-rest-services
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: spring-rest-services
    provider: jkube
    group: com.example
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-ref: solution
        jkube.io/git-url: https://github.com/martinzzler99/rhoar-getting-started.git
        app.openshift.io/vcs-uri: https://github.com/martinzzler99/rhoar-getting-started.git
        jkube.io/git-commit: d674d79ab926312c8edbdc3c6d206d02c7e6cd22
        jkube.io/git-branch: solution
      labels:
        app: spring-rest-services
        provider: jkube
        version: 1.0.0-SNAPSHOT
        group: com.example
    spec:
      containers:
      - env:
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: user
              name: my-database-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: my-database-secret
        - name: JAVA_OPTIONS
          value: -Dspring.profiles.active=openshift
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: spring-rest-services:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: spring-rest-services:latest
    type: ImageChange
