target/classes/META-INF/jkube/openshift/spring-rest-services-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: solution
    prometheus.io/path: /metrics
    jkube.io/git-branch: solution
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
    jkube.io/git-url: https://github.com/martinzzler99/rhoar-getting-started.git
    app.openshift.io/vcs-uri: https://github.com/martinzzler99/rhoar-getting-started.git
    jkube.io/git-commit: d674d79ab926312c8edbdc3c6d206d02c7e6cd22
  labels:
    expose: "true"
    app: spring-rest-services
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: com.example
  name: spring-rest-services
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-rest-services
    provider: jkube
    group: com.example
